@@ -1,3 +1,4 @@
+* Log warning about signd blocking when restrict mssntp used.
 (4.2.5p189) 2009/07/16 Released by Harlan Stenn <stenn@ntp.org>
 * Documentation cleanup from Dave Mills.
 (4.2.5p188) 2009/07/15 Released by Harlan Stenn <stenn@ntp.org>
